WIP: Initial support of DKMS for the kernel module
An advantage of DKMS is that:
- It takes care of detecting all the possibly non-trivial
  configuration of the kernel header files locations.
- Allows a more automatic module update when updating the kernel,
  without need to manually compile and install the LimeSuiteNG.

The logic is implemented in a shell script, which is easier to work
with than CMake.

Currently it takes over the manual module installation, which should
ideally become an option, to be able to operate on systems without
DKMS.

--- a/src/comms/PCIe/linux-kernel-module/Makefile
+++ b/src/comms/PCIe/linux-kernel-module/Makefile
@@ -1,22 +1,23 @@
 # Makefile for kernel module
 KERNEL_VERSION:=$(shell uname -r)
 KERNEL_PATH?=/lib/modules/$(KERNEL_VERSION)/build
-# ARCH?=$(shell uname -m)
+ARCH?=$(shell uname -m)
+
 # ARCH might be 'aarch64', but the linux lib directories might be named 'arm64'
 ARCH?=$(shell if [ "$(shell uname -m)" = "aarch64" ] && [ ! -d $(KERNEL_PATH)/arch/$(shell uname -m) ]; then echo "arm64"; else echo $(shell uname -m); fi)
 
 obj-m = litepcie.o
-litepcie-objs = main.o
+# litepcie-objs = litepcie.o
 
 all: litepcie.ko
 
-export EXTRA_CFLAGS := -std=gnu99 -Wno-declaration-after-statement
+export EXTRA_CFLAGS := -std=gnu11 -Wno-declaration-after-statement -I$(PWD)/bsp
 
-litepcie.ko: main.c
-	make -C $(KERNEL_PATH) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) M=$(shell pwd) modules
+litepcie.ko: litepcie.c
+	make -C $(KERNEL_PATH) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) M=$(PWD) modules
 
-litepcie.ko: litepcie.h config.h flags.h csr.h soc.h
+litepcie.ko: boards.h litepcie.h bsp/config.h bsp/csr.h bsp/flags.h bsp/mem.h bsp/soc.h
 
 clean:
-	make -C $(KERNEL_PATH) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) M=$(shell pwd) clean
+	make -C $(KERNEL_PATH) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) M=$(PWD) clean
 	rm -f *~
